Maven improvements